# readimc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  authors.html  changelog.html  conftest.py  contributing.html  contributors.html  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirements_devel.txt  requirements_test.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: build.yml  docs.yml  test_and_deploy.yml
_sources/: index.md.txt  install.md.txt  usage.md.txt
_sources/autoapi/readimc/: index.rst.txt
_sources/autoapi/readimc/_imc_file/: index.rst.txt
_sources/autoapi/readimc/_imc_mcd_file/: index.rst.txt
_sources/autoapi/readimc/_imc_mcd_xml_parser/: index.rst.txt
_sources/autoapi/readimc/_imc_txt_file/: index.rst.txt
autoapi/readimc/: index.html
autoapi/readimc/_imc_file/: index.html
autoapi/readimc/_imc_mcd_file/: index.html
autoapi/readimc/_imc_mcd_xml_parser/: index.html
autoapi/readimc/_imc_txt_file/: index.html
autoapi/readimc/_mcd_file/: index.html
autoapi/readimc/_mcd_parser/: index.html
autoapi/readimc/_mcd_xml_parser/: index.html
autoapi/readimc/_txt_file/: index.html
autoapi/readimc/_version/: index.html
autoapi/readimc/data/: index.html
autoapi/readimc/imc_file/: index.html
autoapi/readimc/mcd_file/: index.html
autoapi/readimc/mcd_parser/: index.html
autoapi/readimc/txt_file/: index.html
docs/: requirements.txt
docs/source/: conf.py  index.md  install.md  usage.md
readimc/: __init__.py  _imc_file.py  _imc_mcd_file.py  _imc_mcd_xml_parser.py  _imc_txt_file.py  _mcd_file.py  _mcd_parser.py  _mcd_xml_parser.py  _txt_file.py  _utils.py  imc_file.py  mcd_file.py  mcd_parser.py  txt_file.py  utils.py
readimc/data/: __init__.py  _acquisition.py  _panorama.py  _slide.py  acquisition.py  panorama.py  slide.py
test/: test_imc_mcd_file.py  test_imc_txt_file.py  test_mcd_file.py  test_txt_file.py
tests/: test_imc_mcd_file.py  test_imc_txt_file.py  test_mcd_file.py  test_mcd_parser.py
(+22 files in other folders)
