[metadata]
name = readimc
url = https://github.com/BodenmillerGroup/readimc
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Read Fluidigm(R) Imaging Mass Cytometry(TM) files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Fluidigm, Imaging Mass Cytometry, IMC

[options]
zip_safe = True
setup_requires =
    setuptools_scm
install_requires =
    imageio
    numpy
    pandas
python_requires = >=3.8
packages = find:
use_scm_version =
    write_to = readimc/_version.py
