[metadata]
name = readimc
url = https://github.com/BodenmillerGroup/readimc
author = Jonas Windhager
author_email = jonas@windhager.io
maintainer = Milad Adibi
maintainer_email = milad.adibi@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Python package for reading imaging mass cytometry (IMC) files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = imaging mass cytometry, IMC

[options]
zip_safe = True
install_requires =
    imageio[tifffile]>=v2.24.0
    numpy
    pandas
python_requires = >=3.8
packages = find:
